# streamify-app

./: .gitignore  App.tsx  AudioService.ts  Logger.ts  README.md  StorageService.ts  base64.txt  capacitor.config.json  constants.ts  generate-icons.js  index.css  index.html  manifest.json  metadata.json  my-release-key.keystore  package-lock.json  package.json  sw.js  tailwind.config.js  tsconfig.json  types.ts  vite.config.ts
.github/workflows/: build-android.yml  build-windows.yml  main.yml  release.yml
android/: capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/streamify/app/: MainActivity.java  PlaybackService.java  StreamifyMediaPlugin.java  XorDataSource.java
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
components/: Icons.tsx  LogViewer.tsx  Player.tsx  TitleBar.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
