[package]
name = "streamify"
version = "0.1.0"
description = "A Spotify-inspired music streaming application"
authors = ["you"]
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = [ "api-all", "custom-protocol" ] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "streamify_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
